[FIX] web_editor: sets a higher z-index for manipulators
Before this commit, manipulators like the snippet overlay buttons
could be hidden behind parts of the web_editor UI.

task-2312878

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -438,7 +438,7 @@ body.editor_enable.editor_has_snippets {
 // MANIPULATORS
 #oe_manipulators {
     position: relative;
-    z-index: $o-we-overlay-zindex;
+    z-index: $o-we-zindex + 2;
 
     // SNIPPET MANIPULATORS
     .oe_overlay {
